Overview & Marketing Drafted

--- a/project-overview.html
+++ b/project-overview.html
@@ -1,5 +1,4 @@
-
-<div id="project-overview">
+<div class="template-wrapper">
     <section>
         <text>
             <h1>Project Overview</h1>
@@ -8,3 +7,6 @@
         <img src="/images/project-overview/balance-bike-stencil.svg"/>
     </section>
 </div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/project-overview/bike-shcematic-transparent.png" />
