--- a/marketing.html
+++ b/marketing.html
@@ -1,1 +1,28 @@
-Marketing
+<div class="template-wrapper">
+    <section>
+        <text>
+            <h1>The Market's History</h1>
+            <p>During the last 30 years, the United States children’s bicycle market has grown an average of 4% annually.  The market is highly seasonal with sales peaking before Christmas and in the spring.  </p>
+        </text>
+        <img src="/images/project-overview/balance-bike-stencil.svg"/>
+    </section>
+
+    <section class="reverse">
+        <text>
+            <h1>Where we are today</h1>
+            <p> Bicycle sales exploded in 2020 due to people spending more time at home. While 2020 bicycle sales data was unavailable at the time of Tour de Four’s Market Analysis Report, personal communication revealed that this was the biggest bicycle boom in decades. Many stores were sold out of children’s bicycles and restock was difficult due to an impaired global supply chain. Based on an average market growth of 4% annually and the surge in purchases due to COVID-19, Tour de Four consulting concludes that there is unmet demand in the children’s bicycle market.  </p>
+        </text>
+        <img src="/images/marketing/lady-mask.webp"/>
+    </section>
+
+    <section>
+        <text>
+            <h1>Our Solution</h1>
+            <p> Tour de Four recommends a sales strategy of selling wholesale to major physical and online retailers as well as small bicycle retailers. For a marketing and customer service strategy, Tour de Four suggest maintaining an online presence through website and social medial platforms and actively engaging in responding to customer reviews and negative feedback. </p>
+        </text>
+        <img src="/images/marketing/marketing-solution-strategy.png"/>
+    </section>
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/marketing/market-clipart-black.jpg" />
