Finished more pages. 3 remaining

--- a/manufacturing-processes.html
+++ b/manufacturing-processes.html
@@ -1,1 +1,387 @@
-Manufacturing Processes
+<div class="template-wrapper">
+    <section>
+        <text class="valign alone">
+            <h1>Manufacturing Process Liaison</h1>
+            <p>The MP liaison has worked with two different Manufacturing Processes teams to make recommendations for the manufacturing of the balance bike prototype. Below are the raw materials and machines Tour de Four Consulting has recommended for the production, as well as the outsourced parts decided on by the Design Group.</p>
+            
+            <br>
+
+            <h2>Summary of Parts</h2>
+            <table>
+                <tr>
+                  <th>Part Number</th>
+                  <th>Part Description</th>
+                  <th>Make/Buy</th>
+                </tr>
+                <tr>
+                    <td>10 – 14, 39-42</td>
+                    <td>Wheel</td>
+                    <td>Buy</td>
+                </tr>
+                <tr>
+                    <td>25-27, 43-44</td>
+                    <td>Saddle</td>
+                    <td>Buy</td>
+                </tr>
+                <tr>
+                    <td>18 -23</td>
+                    <td>Quick Release Lever </td>
+                    <td>Buy</td>
+                </tr>
+                <tr>
+                    <td>30</td>
+                    <td>Handlebar Grips</td>
+                    <td>Buy</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>Small Head set washer </td>
+                    <td>Buy</td>
+                </tr>
+                <tr>
+                    <td>33</td>
+                    <td>Footrest Washer</td>
+                    <td> here </td>
+                </tr>
+                <tr> <!---->
+                    <td>34</td>
+                    <td>Footrest Rivet</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>35</td>
+                    <td>Flat Wrench</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>36</td>
+                    <td>Allen Wrench</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>47</td>
+                    <td>Race</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>28</td>
+                    <td>Extra Extended Seat Post</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>29</td>
+                    <td>Extended Seat Post</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>31</td>
+                    <td>Instructions</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>32</td>
+                    <td>Footrest</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>37</td>
+                    <td>Back Wheel Stay</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>38</td>
+                    <td>Fork Arm </td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>45</td>
+                    <td>Handlebars</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>46</td>
+                    <td>Handlebar Neck</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>48</td>
+                    <td>Headtube Sleeves</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>49</td>
+                    <td>Steer Tube</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>50</td>
+                    <td>Fork Arm Combiner</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>52A</td>
+                    <td>Tube on End of Frame</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>52B</td>
+                    <td>Main Frame</td>
+                    <td> here </td>
+                </tr>
+                <tr>
+                    <td>52B</td>
+                    <td>Tube through Frame </td>
+                    <td> here </td>
+                </tr>
+            </table>
+
+            <br>
+
+            <h2>Outsourced Parts</h2>
+            <table>
+                <tr>
+                    <th>Parts Description</th>
+                    <th>Source</th>
+                    <th>Price Per unit</th>
+                    <th>Annual Quantity</th>
+                    <th>Annual Cost</th>
+                </tr>
+                <tr>
+                    <td>Wheel</td>
+                    <td>Alibaba</td>
+                    <td>$5.95</td>
+                    <td>474,000</td>
+                    <td>$2,820,300.00</td>
+                </tr>
+
+                <tr>
+                    <td>Saddle</td>
+                    <td>Alibaba</td>
+                    <td> $1.31 </td>
+                    <td> 237,000 </td>
+                    <td> $310,470.00 </td>
+                </tr>
+                <tr>
+                    <td>Quick Release Lever</td>
+                    <td>JBI.BIKE</td>
+                    <td> $3.95 </td>
+                    <td> 474,000 </td>
+                    <td> $1,872,300.00 </td>
+                </tr>
+                <tr>
+                    <td>Handlebar Grips</td>
+                    <td>Monster Scooter Parts</td>
+                    <td> $2.99 </td>
+                    <td> 474,000 </td>
+                    <td> $1,417,260.00 </td>
+                </tr>
+                <tr>
+                    <td>Small Headset Washer</td>
+                    <td>Grainger</td>
+                    <td> $0.93 </td>
+                    <td> 237,000 </td>
+                    <td> $220,410.00 </td>
+                </tr>
+                <tr>
+                    <td>Large Headset Washer</td>
+                    <td>Grainger</td>
+                    <td> $0.62 </td>
+                    <td> 237,000 </td>
+                    <td> $146,940.00 </td>
+                </tr>
+                <tr>
+                    <td>Footrest Washer </td>
+                    <td>Grainger</td>
+                    <td> $0.0488 </td>
+                    <td> 237,000 </td>
+                    <td> $11,565.60 </td>
+                </tr>
+                <tr>
+                    <td>Footrest Rivet </td>
+                    <td>Grainger</td>
+                    <td> $0.04468 </td>
+                    <td> 237,000 </td>
+                    <td> $10,589.16 </td>
+                </tr>
+                <tr>
+                    <td>Flat Wrench </td>
+                    <td>Fastener Superstore</td>
+                    <td> $0.2467 </td>
+                    <td> 237,000 </td>
+                    <td> $58,467.90 </td>
+                </tr>
+                <tr>
+                    <td>Allen Wrench </td>
+                    <td>Fastener Superstore</td>
+                    <td> $0.2467 </td>
+                    <td> 237,000 </td>
+                    <td> $58,467.90 </td>
+                </tr>
+                <tr>
+                    <td>Race</td>
+                    <td>Grainger </td>
+                    <td> $0.62 </td>
+                    <td> 237,000 </td>
+                    <td> $146,940.00 </td>
+                </tr>
+            </table>     
+            <table>
+                <tr style="text-align: right;">
+                    <th> Total Outsourced Cost </th>
+                    <td > $7,073,710.56 </td>
+                </tr>
+            </table>
+        </text>
+    </section>
+
+    <!-- Raw Materials -->
+    <section class="short shadow">
+        <text class="valign alone">
+            <h1>Raw Materials</h1>
+        </text>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Polypropylene - HIVAL ICP 2620</h2>
+            <p>Parts: 32, 48</p>
+            <p>Source: Nexeo Plastics</p>
+            <p>Annual Costs: $45,444.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/polypropylene.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Low Carbon Steel (various thicknesses and diameters)</h2>
+            <p>Parts: 28, 29, 46, 45, 37, 38, 49, 50, 52A, 52B, 52C</p>
+            <p>Source: McMaster-Carr</p>
+            <p>Annual Costs: $4,941,994.45</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/low-carbon-steel.png"/>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Powder Coating Paint</h2>
+            <p>All steel parts</p>
+            <p>Source: Prismatic Powders</p>
+            <p>Annual Costs: $2,118,780.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/poweder-coating-paint.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Paper</h2>
+            <p>Parts: 31</p>
+            <p>Source: Staples</p>
+            <p>Annual Costs: $1,515.22</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/paper.png"/>
+    </section>
+
+    <!-- Machines -->
+    <section class="">
+        <text class="valign alone">
+            <h1>Machines</h1>
+            <p>Listed below, are all machines needed to manufacture the balance bikes. Tour de Four Consulting has estimated that the annual energy costs will be $15,721.68 and the annual maintenance costs will be $40,303.09. The total costs for all machines will be $1,151,516.97, and it is estimated that 56 machine operators will be needed. </p>
+        </text>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Band Saw</h2>
+            <p>Brand: BSV-12VS-Vertical Band Saw</p>
+            <p>Parts: 28, 29, 37(2), 38(2), 45, 46, 49, 50, 52A, 52B, 52C</p>
+            <p>Source Baileigh Industrial</p>
+            <p>Quantity: 14</p>
+            <p>Processing Time: 30s</p>
+            <p>Costs per machine: $3,395.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/band-saw.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Hydralic Punching and Shearing</h2>
+            <p>Brand: Nargesa MX700</p>
+            <p>Parts: 37(2), 38(2)</p>
+            <p>Source: Nargesa</p>
+            <p>Quantity: 3</p>
+            <p>Processing Time: 17s</p>
+            <p>Costs per machine: $18,000.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/hydralic-punching-shearing.png"/>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Tube Forming Machine</h2>
+            <p>Brand: RDB-350-TS</p>
+            <p>Parts: 28, 29, 37(2), 38(2), 45, 46, 49, 50, 52Am 52B, 52C</p>
+            <p>Source: Baileigh Industrial</p>
+            <p>Quantity: 9</p>
+            <p>Processing Time: 20s</p>
+            <p>Costs per machine: $24,152.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/tube-forming-machine.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Drill Press</h2>
+            <p>Brand: Baileigh Drill Press DP-1250VS</p>
+            <p>Parts: 28, 29, 37(2), 38(2), 46, 49, 50, 52A, 52B, 52C</p>
+            <p>Source: Baileigh Industrial</p>
+            <p>Quantity: 13</p>
+            <p>Processing Time: 30s</p>
+            <p>Costs per machine: $4,563.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/drill-press.png"/>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Robotic Welding System</h2>
+            <p>Brand: TPS/i Robotic Welding</p>
+            <p>Parts: 37(2), 38(2), 45, 46, 47, 49, 50, 52A, 52B, 52C</p>
+            <p>Source: Fronius Perfect Welding</p>
+            <p>Quantity: 2</p>
+            <p>Processing Time: 196 parts/min</p>
+            <p>Costs per machine: $213,000.00</p>
+        </text>
+        <img class="" src="/images/manufacturing/robotic-welding-system.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Powder Coating Oven</h2>
+            <p>Brand: Specifically designed for our Balance Bikes</p>
+            <p>Parts: All steel parts</p>
+            <p>Source: Reliant Finishing Systems</p>
+            <p>Quantity: 4</p>
+            <p>Processing Time: 116s</p>
+            <p>Costs per machine: $162,500.00</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/powder-coating-oven.png"/>
+    </section>
+    <section >
+        <text class="valign">
+            <h2>Injection Molding</h2>
+            <p>Brand: Himalia HM88</p>
+            <p>Parts: 32, 48</p>
+            <p>Source: Haida Machinery America, Inc.</p>
+            <p>Quantity: 2</p>
+            <p>Processing Time: Part 32: 15s, Part 48: 2.5s</p>
+            <p>Costs per machine: $23,299.99</p>
+        </text>
+        <img class="" src="/images/manufacturing/injextion-molding.png"/>
+    </section>
+    <section class="reverse shadow">
+        <text class="valign">
+            <h2>Printer</h2>
+            <p>Brand: Xerox VersaLink C405</p>
+            <p>Parts: 31</p>
+            <p>Source: Staples</p>
+            <p>Quantity: 1</p>
+            <p>Processing Time: 0.75s</p>
+            <p>Costs per machine: $699.99</p>
+        </text>
+        <img class="ball" src="/images/manufacturing/printer.png"/>
+    </section>
+    
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg darker" src="/images/manufacturing/assembly-line-factory.jpg" />
