--- a/product-analysis.html
+++ b/product-analysis.html
@@ -1,1 +1,77 @@
-Project Analysis
+<div class="template-wrapper">
+    <section>
+        <text class="alone">
+            <h1>Direct Material & Labor Cost</h1>
+            <p>We will show the direct material and labor cost of Tour De Four. This page will have the pictures of the assembly and under each picture will have all the direct material cost, direct labor cost, and labor hours per unit. At the end will sum up all the numbers to get the totals.</p>
+        </text>
+    </section>
+
+    <!-- Handlebar -->
+    <section class="reverse shadow">
+        <text>
+            <h1>Handlebar</h1>
+            <p> Direct Material Cost: $6.6865 </p>
+            <p> Direct Labor Cost: $1.2932 </p>
+            <p> Labor Hours per unit: 0.1019 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-handlebar.png"/>
+    </section>
+
+    <!-- Bike Seat -->
+    <section>
+        <text>
+            <h1>Bike Seat</h1>
+            <p> Direct Material Cost: $4.3612 </p>
+            <p> Direct Labor Cost: $0.9431 </p>
+            <p> Labor Hours per unit: 0.07432 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-seat.png"/>
+    </section>
+
+     <!-- Accessory Bag -->
+     <section class="reverse shadow">
+        <text> 
+            <h1>Accessory Bag</h1>
+            <p> Direct Material Cost: $13.3766 </p>
+            <p> Direct Labor Cost: $0.7943  </p>
+            <p> Labor Hours per unit: 0.0626 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-accessory-bag.png"/>
+    </section>
+
+     <!-- Front Wheel -->
+     <section>
+        <text>
+            <h1>Front Wheel</h1>
+            <p> Direct Material Cost: $13.3873 </p>
+            <p> Direct Labor Cost: $2.2706 </p>
+            <p> Labor Hours per unit: 0.24943 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-front-wheel.png"/>
+    </section>
+
+     <!-- Bike Frame -->
+     <section class="reverse shadow">
+        <text>
+            <h1>Bike Frame</h1>
+            <p> Direct Material Cost: $18.9295 </p>
+            <p> Direct Labor Cost: $3.8923 </p>
+            <p> Labor Hours per unit: 0.64423 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-bike-frame.png"/>
+    </section>
+
+     <!-- Final Assembly -->
+     <section>
+        <text>
+            <h1>Final Assembly</h1>
+            <p> Direct Material Cost: $57.3112  </p>
+            <p> Direct Labor Cost: $9.9080 </p>
+            <p> Labor Hours per unit: 1.18877 </p>
+        </text>
+        <img src="/images/product-analysis/dmlc-final-assembly.png"/>
+    </section>
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/marketing/market-clipart-black.jpg" />
