--- a/project-overview.html
+++ b/project-overview.html
@@ -1,12 +1,28 @@
 <div class="template-wrapper">
     <section>
-        <text>
+        <text class="valign">
             <h1>Project Overview</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Marathon Investments hired Tour De Four Consulting to conduct a five-year venture analysis on the profitability and feasibility of manufacturing balance bicycles. Analyses were performed throughout the project on the facility’s site selection, the balance bike market, methods for manufacturing, plant layout, logistics, quality operations, facility simulation models, human resources, and the overall financial feasibility of the venture.</p>
         </text>
-        <img src="/images/project-overview/balance-bike-stencil.svg"/>
+        <img class="round" src="/images/team-logo.jpg"/>
+    </section>
+
+    <section class="reverse shadow">
+        <text class="valign alone">
+            <h1>Financing</h1>
+            <p>The assumption is that two separate bank loans will cover 80% of the land and capital cost; and Marathon Investments will cover the remaining 20% as the firm’s equity in the venture. After a financial analysis, Tour De Four calculated the total profit after year five to be ($36,980,610). Production expenses far exceeded the total sales revenue in all planned years of production. Thus, the investment would yield no return to the firm or Marathon Investments. With the venture’s status, Tour De Four Consulting does not recommend investing in this venture.</p>
+        </text>
+    </section>
+
+    <section>
+        <text class="valign">
+            <h1>Profitability</h1>
+            <p>To make this venture profitable, a major reduction in employee salaries, material cost, and fabrication expenses is required to turn a profit. A sensitivity analysis revealed that a 50% reduction in employee salaries, material costs, and fabrication expenses would yield a profit with a 13% rate of return after asset disposal. With the reduction, years 2-5 all yield a profit after taxes. The net cash flow after asset disposal in year five would be $8,624,830. However, a complete overhaul of the current system would be required to achieve this cost reduction.</p>
+        </text>
+        <img src="/images/project-overview/cash-mountain.png"/>
     </section>
 </div>
 
 <!-- Floating Background -->
 <img class="floating-bg" src="/images/project-overview/bike-shcematic-transparent.png" />
+
