--- a/simulation.html
+++ b/simulation.html
@@ -1,1 +1,76 @@
- Simulation
+<div class="template-wrapper">
+    <section>
+        <text class="valign alone">
+            <h1>Introduction</h1>
+            <p>Tour De Four was given the task to complete an analysis to produce 12’’ balance bikes. For this section, Neil Eno was tasked to fix a problem that would arise from Tour De Four’s facility. The question he answered was which production would prove more beneficial to the company as they were to produce the balance bikes. The two layouts to be compared are Product line layout and Process Layout. Neil used two simulation to prove which one would be the better of the two.</p>
+        </text>
+    </section>
+    <section class="shadow">
+        <text class="valign alone">
+            <h1>Production Line vs. Process</h1>
+            <p>Before getting into all the simulations it would help to understand what the two layouts are and what makes them different. Production Line layout. Is a linear process where after the material is completed in one process it then moved to the next. Production is known for mass production of products. Process Layout are for similar process are combined and moves from one group to the next. Process Layout is also good for moderate production in facilities. Though the layouts do not seem similar it is still a question of which to choose for the companies’ facility.</p>
+        </text>
+    </section>
+    <section class="short">
+        <text class="valign alone">
+            <h1>Simulation</h1>
+        </text>
+    </section>
+    <section class="short">
+        <text class="valign alone">
+            <img class="full-span" src="/images/simulation/simulation-1.gif" />
+            <p>In the production line, there are four processes: Press/Cutting Process where the material is cut and shaped, Welding Process where all the parts are welded together, Paint Process where all of the metal materials are painted, and Assembly where all the non-metal materials are put onto the bike frame. After it goes through the processes, it is then sent to a combiner where the bike and source box is combined into the final product. The way the material is moved from one process to the next is conveyors. After all the numbers were put into each process the production layout produced 1048 bikes during one work shift.</p>
+        </text>
+    </section>
+    <section class="short">
+        <text class="valign alone">
+            <table>
+                <tr>
+                    <th>Process:</th>
+                    <th>Prep Time (min):</th>
+                    <th>Process Times (min):</th>
+                </tr>
+                <tr>
+                    <td>Press/Cutting Process</td>
+                    <td>20</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>Welding Process</td>
+                    <td>0</td>
+                    <td>34</td>
+                </tr>
+                <tr>
+                    <td>Paint Process</td>
+                    <td>10</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>Assembly</td>
+                    <td>0</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>Final Assembly</td>
+                    <td>0</td>
+                    <td>15</td>
+                </tr>
+            </table>
+        </text>
+    </section>
+    <section class="short">
+        <text class="valign alone">
+            <img class="full-span" src="/images/simulation/simulation-2.gif" />
+            <p>The Process Layout has the same times with production line layout with all the processes. The main difference is there are 2 material handlers to move the product from one process to the next. The first material handler moves the product from Press/Cutting Process to Welding Process and entering the Paint Process. The second material handler moves the product from the end of paint process to assembly and to final assembly. After the layout goes through a shift it produces 463</p>
+        </text>
+    </section>
+    <section class="shadow">
+        <text class="valign alone">
+            <h1>Conclusion</h1>
+            <p>From the production of the layouts it shows that Tour De Four should go with production line layout. The demand per shift is 930 bikes per day, production line layout meets the demand while process layout could not meet the requirement.</p>
+        </text>
+    </section>
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/simulation/blue-print-bg.jpeg" />
