--- a/site-selection.html
+++ b/site-selection.html
@@ -1,2 +1,21 @@
- 
-Site Selection
+<div class="template-wrapper">
+    <section>
+        <text class="valign alone">
+            <h1>Site Selection</h1>
+            <p>Tour De Four Consulting identified three potential commercial properties for the venture. After identifying three prospective sites, Tour De Four Consulting’s Site Analyst conducted a thorough qualitative and quantitative analysis on each site to conclude that Site 3 in Olive Branch, Mississippi is the most favorable location for the balance bike manufacturing facility. To reach this conclusion, the qualitative and quantitative factors were first chosen and ranked based on the needs of the venture. Then, each site’s qualitative and quantitative factors were researched, benchmarked, and scored to select the best site. The map view of the site is seen below.</p>
+        </text>
+    </section>
+
+    <section class="shadow">
+        <text class="valign">
+            <h1>Location</h1>
+            <p>Tour De Four Consulting identified three potential commercial properties for the venture. After identifying three prospective sites, Tour De Four Consulting’s Site Analyst conducted a thorough qualitative and quantitative analysis on each site to conclude that Site 3 in Olive Branch, Mississippi is the most favorable location for the balance bike manufacturing facility. To reach this conclusion, the qualitative and quantitative factors were first chosen and ranked based on the needs of the venture. Then, each site’s qualitative and quantitative factors were researched, benchmarked, and scored to select the best site. The map view of the site is seen below.</p>
+        </text>
+        <img src="/images/site-selection/selection-map.png"/>
+    </section>
+
+</div>
+
+<!-- Floating Background -->
+<img class="floating-bg" src="/images/site-selection/city-streets.jpeg" />
+
