Added layout page

--- a/header.html
+++ b/header.html
@@ -28,6 +28,10 @@
       <img src="/images/icons/workflow.svg"/>
       <span>Methods</span>
     </a>
+    <a class="nav-item" href="#layout.html">
+      <img src="/images/icons/flootplans.svg"/>
+      <span>Layout</span>
+    </a>
     <a class="nav-item" href="#lean-and-logistics.html">
       <img src="/images/icons/optimization.svg"/>
       <span>Lean & Logistsics</span>
