--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Tour De Four Consulting" />
     <meta charset="utf-8">
     <title>Meet The Team - Tour De Four Consulting</title>
+    <link rel="shortcut icon" type=“image/x-icon” src="favicon.ico"/>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/colors.css">
