--- a/header.html
+++ b/header.html
@@ -1,5 +1,8 @@
-<div class="sticky-nav-container">
+<div class="sticky-nav-container" id="sticky-nav-container" onclick="toggleNav()">
   <div class="sticky-nav">
+    <a class="nav-item hamburger" href="" >
+      <img src="/images/icons/hamburger-menu.svg"/>
+    </a>
     <a class="nav-item" href="#project-overview.html" >
       <img src="/images/icons/view-details.svg"/>
       <span>Overview</span>
