--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -1,4 +1,4 @@
-<div class="template-wrapper">
+<div class="template-wrapper meet-the-team">
     <section>
         <text class="valign">
             <h1>Adam Nguyen</h1>
