--- a/site-selection.html
+++ b/site-selection.html
@@ -9,8 +9,11 @@
     <section class="shadow">
         <text class="valign">
             <h1>Location</h1>
-            <p>Tour De Four Consulting identified three potential commercial properties for the venture. After identifying three prospective sites, Tour De Four Consulting’s Site Analyst conducted a thorough qualitative and quantitative analysis on each site to conclude that Site 3 in Olive Branch, Mississippi is the most favorable location for the balance bike manufacturing facility. To reach this conclusion, the qualitative and quantitative factors were first chosen and ranked based on the needs of the venture. Then, each site’s qualitative and quantitative factors were researched, benchmarked, and scored to select the best site. The map view of the site is seen below.</p>
+            <p>Located at 8412 Old Craft Rd, in Olive Branch, MS, the site is 14.41 acres and will cost 275,000 before taxes. The site is near HWY 78, the interstate system, and the Memphis Airport which is favorable for shipping logistics. The qualitative factors analyzed were labor availability, transportatio, community culture, education, and community services, The quantitative factors considered were land acquisition cost in addition to costs associated with staffing, taxes, and transportation. Once each site was scored on qualitative and quantitative factors, those scores were used to calculate an overall score for each site. All analyses found site 3 to be the most favorfable; concluding that the site in Olive Branch, Mississippi best meets the needs of the venture and will be the most profitable.</p>
         </text>
+        <img src="/images/site-selection/site-photo.jpg"/>
+    </section>
+    <section class="">
         <img src="/images/site-selection/selection-map.png"/>
     </section>
 
